# OnlineWellLogInterpretation

./: README.md  main.py  pyproject.toml
Results/: test.json
src/: app_ver_0_0_1.py
tests_dependances/: test_st_canvas.py
